--- a/style.css
+++ b/style.css
@@ -681,6 +681,85 @@ body {
     line-clamp: 6;
   }
 }
+/* -----------------------------------------EDUCATION SECTION --------------------------*/
+.Educationsection {
+    padding: 80px 20px;
+    text-align: center;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 120px;
+}
+#Education {
+  scroll-margin-top: 105px; /* slightly more than navbar height */
+}
+
+/* Heading */
+.edu-heading {
+    font-size: 3rem;
+    margin-bottom: 30px;
+    font-weight: 500;
+    
+}
+
+.edu-heading span {
+    color: #ff7a00;
+}
+
+/* Education Box */
+.education-box {
+    width: 70%;
+    max-width: 900px;
+    margin: auto;
+    padding: 20px 40px;
+    background: radial-gradient(circle at center, #0f1624, #0a0f1a);
+    /* background: rgba(255, 255, 255, 0.03); */
+    border-radius: 20px;
+
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+/* Inside Text */
+.education-box h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+.education-box h4 {
+    font-size: 20px;
+    margin-bottom: 12px;
+    font-weight: 500;
+    color: #ffb34d;
+}
+
+/* Year + Place */
+.year-place {
+    font-size: 17px;
+    opacity: 0.8;
+    margin-bottom: 20px;
+}
+
+.dot {
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    margin: 0 8px;
+    background: #fff;
+    border-radius: 50%;
+    opacity: 0.7;
+}
+
+/* Description */
+.desc {
+    font-size: 18px;
+    line-height: 1.6;
+    opacity: 0.85;
+}
+
+
 
 /* ---------------------------------CONTACT SECTION ------------------------- */
 /* Wrapper */
