--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ html {
     cursor: pointer;
   }
 }
-@media(max-width :480){
+@media(max-width :480px){
  .hero-left h1 {
     font-size: 2.8rem;
     white-space: nowrap;
@@ -638,8 +638,8 @@ html {
 
 /* SVG icon styles */
 .icon {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   display: block;
   color: white; /* icons inherit this color */
   opacity: 0.95;
