--- a/style.css
+++ b/style.css
@@ -7,11 +7,26 @@
 
 body {
   /* background: radial-gradient(circle at top left, #1c253d, #010410); */
-  background: radial-gradient(circle at top left, #121827, #010410, #0f0f1f);
-  color: white;
+  /* background: radial-gradient(circle at top left, #121827, #010410, #0f0f1f);
+  color: white; */
+   background: #010409; /* darker than #020617 */
+  color: #ffffff;
   padding: 20px;
   line-height: 1.5;
- /* height: 500vh; */
+ 
+}
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(
+    120deg,
+    transparent 28%,
+    rgba(255,255,255,0.12) 50%,
+    transparent 72%
+  );
+  pointer-events: none;
+  mix-blend-mode: screen;
 }
 html {
   scroll-behavior: smooth;
